--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
  <PARAM NAME=movie VALUE="bin/snake.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#FFFFFF> <EMBED src="bin/snake.swf" quality=high bgcolor=#FFFFFF  WIDTH="800" HEIGHT="800" NAME="snake" ALIGN=""
  TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer"></EMBED>
 </OBJECT>
-<script>
-  setTimeout(function() {
-    window.location.reload();
-  }, 3000);
-</script>
+<!--<script>-->
+  <!--setTimeout(function() {-->
+    <!--window.location.reload();-->
+  <!--}, 8000);-->
+<!--</script>-->
 </BODY>
 </HTML>
